--- a/TrueWoW Launcher C#/TrueWoW Launcher C/TrueWoW Launcher C.csproj
+++ b/TrueWoW Launcher C#/TrueWoW Launcher C/TrueWoW Launcher C.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Form2.Designer.cs">
       <DependentUpon>Form2.cs</DependentUpon>
     </Compile>
+    <Compile Include="MorpheusFont.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadSettingsFile.cs" />
