--- a/TrueWoW Launcher C#/TrueWoW Launcher C/TrueWoW Launcher C.csproj
+++ b/TrueWoW Launcher C#/TrueWoW Launcher C/TrueWoW Launcher C.csproj
@@ -9,7 +9,7 @@
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>TrueWoW_Launcher</RootNamespace>
-    <AssemblyName>TrueWoW Launcher C</AssemblyName>
+    <AssemblyName>TrueWoW Launcher</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -28,11 +28,11 @@
     <SupportUrl>http://www.truewow.org/</SupportUrl>
     <ErrorReportUrl>http://www.truewow.org/</ErrorReportUrl>
     <TargetCulture>en</TargetCulture>
-    <ProductName>TrueWoW Launcher - by bunak</ProductName>
-    <PublisherName>TrueWoW Launcher</PublisherName>
-    <SuiteName>TrueWoW Launcher - by bunak</SuiteName>
-    <ApplicationRevision>13</ApplicationRevision>
-    <ApplicationVersion>0.1.1.%2a</ApplicationVersion>
+    <ProductName>TrueWoW Launcher</ProductName>
+    <PublisherName>truewow.org</PublisherName>
+    <SuiteName>TrueWoW Launcher</SuiteName>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>0.1.0.0</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
     <BootstrapperEnabled>true</BootstrapperEnabled>
@@ -66,7 +66,16 @@
     <GenerateManifests>true</GenerateManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
+  </PropertyGroup>
+  <PropertyGroup>
+    <TargetZone>LocalIntranet</TargetZone>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>logo.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -100,10 +109,12 @@
       <DependentUpon>Form3.cs</DependentUpon>
     </Compile>
     <Compile Include="MorpheusFont.cs" />
+    <Compile Include="News.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadSettingsFile.cs" />
     <Compile Include="WriteSettingsFile.cs" />
+    <Compile Include="ZipStorer.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -124,6 +135,7 @@
     </Compile>
     <Content Include="fonts\FRIZQT__.TTF" />
     <Content Include="fonts\MORPHEUS.TTF" />
+    <None Include="Properties\app.manifest" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -133,7 +145,6 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <None Include="TrueWoW Launcher C_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
     <COMReference Include="WMPLib">
@@ -170,6 +181,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="localsettings.xml" />
+    <Content Include="logo.ico" />
     <Content Include="sound\mouseClick.wav" />
     <Content Include="sound\mouseOver.wav" />
     <Content Include="sound\newsSelectorClick.wav" />
@@ -187,6 +199,15 @@
       <IncludeHash>True</IncludeHash>
       <FileType>File</FileType>
     </PublishFile>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SereniaBLPLib\SereniaBLPLib.csproj">
+      <Project>{4ED9F877-A9BB-470F-B35C-694147472080}</Project>
+      <Name>SereniaBLPLib</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
